--- a/views/mainquiz.ejs
+++ b/views/mainquiz.ejs
@@ -54,25 +54,18 @@
 
                     <li class="category">
                         <button class="category-btn">
-                            <span class="category-title">Sorting</span>
+                            <a href="/practice/sorting" class="category-link">
+                                <span class="category-title">Sorting</span>
+                            </a>
                         </button>
-                        <div class="category-content">
-                            <a href="/practice/bubblesort">Bubble Sort</a>
-                            <a href="/practice/selectionsort">Selection Sort</a>
-                            <a href="/practice/insertionsort">Insertion Sort</a>
-                            <a href="/practice/mergesort">Merge Sort</a>
-                            <a href="/practice/quicksort">Quick Sort</a>
-                        </div>
                     </li>
 
                     <li class="category">
                         <button class="category-btn">
-                            <span class="category-title">Searching</span>
+                            <a href="/practice/searching" class="category-link">
+                                <span class="category-title">Searching</span>
+                            </a>
                         </button>
-                        <div class="category-content">
-                            <a href="/practice/searchlinear">Linear Search</a>
-                            <a href="/practice/searchbinary">Binary Search</a>
-                        </div>
                     </li>
 
                     <li class="category">
@@ -101,37 +94,26 @@
 
                     <li class="category">
                         <button class="category-btn">
-                            <span class="category-title">Binary Search Tree</span>
+                            <a href="/practice/bst" class="category-link">
+                                <span class="category-title">Binary Search Tree</span>
+                            </a>
                         </button>
-                        <div class="category-content">
-                            <a href="/practice/binarysearchtreeinsertion">Insertion</a>
-                            <a href="/practice/binarysearchtreedeletion">Deletion</a>
-                            <a href="/practice/binarysearchtreesearching">Searching</a>
-                        </div>
                     </li>
 
                     <li class="category">
                         <button class="category-btn">
-                            <span class="category-title">Graphs</span>
+                            <a href="/practice/graphs" class="category-link">
+                                <span class="category-title">Graphs</span>
+                            </a>
                         </button>
-                        <div class="category-content">
-                            <a href="/practice/graphbfs">BFS</a>
-                            <a href="/practice/graphdfs">DFS</a>
-                            <a href="/practice/graphtopological">Topological Sort</a>
-                        </div>
                     </li>
 
                     <li class="category">
                         <button class="category-btn">
-                            <span class="category-title">Algorithms</span>
+                            <a href="/practice/algo" class="category-link">
+                                <span class="category-title">Algorithms</span>
+                            </a>
                         </button>
-                        <div class="category-content">
-                            <a href="/practice/algoprims">Prim's Algorithm</a>
-                            <a href="/practice/algokruskal">Kruskal's Algorithm</a>
-                            <a href="/practice/algodjikstra">Dijkstra's Algorithm</a>
-                            <a href="/practice/algobellman">Bellman-Ford Algorithm</a>
-                            <a href="/practice/algokosaraju">Kosaraju's Algorithm</a>
-                        </div>
                     </li>
                 </ul>
             </section>
