--- a/public/css/dsapage.css
+++ b/public/css/dsapage.css
@@ -40,6 +40,7 @@ body {
     width: 38px;
     height: 38px;
     border-radius: 8px;
+    filter: saturate(0.7) brightness(0.95);
 }
 
 .nav-title {
