--- a/public/css/randomques.css
+++ b/public/css/randomques.css
@@ -47,10 +47,12 @@
   }
   
   
-  .logo{
-    height: 50px;
-    width: 50px;
-  }
+  .logo {
+    width: 38px;
+    height: 38px;
+    border-radius: 8px;
+    filter: saturate(0.7) brightness(0.95);
+}
   
   
   .form-inline{
