--- a/views/mainlearn.ejs
+++ b/views/mainlearn.ejs
@@ -14,17 +14,16 @@
     <div class="container">
         <!-- NAVBAR -->
         <nav class="navbar">
-            <div class="nav-left">
-                <img src="/media/logocc.jpg" class="logo" alt="CodeCanvas Logo">
+            <a href="/" class="back-btn">
+                <i class="fas fa-arrow-left"></i>
+            </a>
+
+            <!-- Logo + Text (centered) -->
+            <div class="nav-center">
+                <img src="/media/logocc.png" class="logo" alt="CodeCanvas">
                 <span class="nav-title">CodeCanvas</span>
             </div>
 
-            <div class="nav-right">
-                <div class="search-wrapper">
-                    <input class="search" type="search" placeholder="Search topics or concepts..." autocomplete="off">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-            </div>
         </nav>
 
         <!-- HEADER / TITLE SECTION -->
