--- a/views/mainquiz.ejs
+++ b/views/mainquiz.ejs
@@ -15,17 +15,17 @@
         <div class="container">
             <!-- Navbar (same as other pages) -->
             <nav class="navbar">
-                <div class="nav-left">
-                    <img src="/media/logocc.jpg" class="logo" alt="CodeCanvas Logo">
-                    <span class="nav-title">CodeCanvas</span>
-                </div>
-                <div class="nav-right">
-                    <div class="search-wrapper">
-                        <input class="search" type="search" placeholder="Search topics..." autocomplete="off">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </div>
-                </div>
-            </nav>
+            <a href="/" class="back-btn">
+                <i class="fas fa-arrow-left"></i>
+            </a>
+
+            <!-- Logo + Text (centered) -->
+            <div class="nav-center">
+                <img src="/media/logocc.png" class="logo" alt="CodeCanvas">
+                <span class="nav-title">CodeCanvas</span>
+            </div>
+
+        </nav>
 
             <!-- Main Heading -->
             <div class="head">
